--- a/website/components/Card.css
+++ b/website/components/Card.css
@@ -3,13 +3,14 @@
 	border-radius: 8px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	font-weight: bold;
-	padding: 15px 10px;
+	padding: 15px;
 }
 
 .cardVotes {
 	display: flex;
 	justify-content: space-around;
 	font-size: 20px;
+	padding: 15px 0;
 }
 
 .voteTextSi {
