feat(polls): integrate web service for poll details

--- a/website/pages/polls/PollDetails.css
+++ b/website/pages/polls/PollDetails.css
@@ -31,14 +31,13 @@
 	display: flex;
 	justify-content: center;
 	min-height: 30vh;
-	padding: 40px;
+	padding: 5%;
 	position: relative;
 }
 
 .containerResume {
 	background-color: #fff;
 	border-radius: 20px;
-	padding: 20px;
 	position: absolute;
 	bottom: -100px;
 }
